Clean up CSS + Fix alignment bug
Since changing the font size of the article header, the optical alignment was off a little, so adjusted the padding-top to pull it down to align closely with the toolbar buttons

Removed redudant title style

--- a/App/css/viewer.css
+++ b/App/css/viewer.css
@@ -66,7 +66,7 @@ blockquote {
     position: relative;
     font-family: 'Segoe UI';
     width: 100%;
-    padding-top: 6px;
+    padding-top: 10px;
     padding-bottom: 6px;
     line-height: 1.6;
     top: 0px;
